<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    tools:context="com.example.android.justjava.MainActivity">

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textCapWords" />

    <TextView
        style = "@style/custom_header"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/topp"/>

    <CheckBox
        android:id="@+id/check1"
        style = "@style/custom_layout"
        android:paddingLeft="24dp"
        android:text="@string/cream"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/check2"
        style = "@style/custom_layout"
        android:paddingLeft="24dp"
        android:text="@string/choco"
        android:textSize="16sp" />

    <TextView
        style = "@style/custom_header"
        android:fontFamily="sans-serif"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/quan"/>

    <RelativeLayout
        style = "@style/custom_layout">

        <Button
            android:id="@+id/minus"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="decrement"
            android:text="-"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/quantity_text_view"
            style = "@style/custom_layout"
            android:layout_toRightOf="@id/minus"
            android:fontFamily="sans-serif"
            android:paddingBottom="16dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="16dp"
            android:text="@string/one"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_toRightOf="@id/quantity_text_view"
            android:onClick="increment"
            android:text="+"
            tools:ignore="HardcodedText" />
    </RelativeLayout>

    <TextView
        style = "@style/custom_header"
        android:fontFamily="sans-serif"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/price" />

    <TextView
        android:id="@+id/price_text_view"
        style = "@style/custom_layout"
        android:fontFamily="sans-serif"
        android:paddingBottom="16dp"
        android:text=""
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        style = "@style/custom_layout"
        android:onClick="submitOrder"
        android:text="@string/order" />

</LinearLayout>
